--- a/projects/tira/dominion/Makefile
+++ b/projects/tira/dominion/Makefile
@@ -27,6 +27,9 @@ player: player.c interface.o
 unittest1: unittest1.c dominion.o rngs.o
 	gcc -o unittest1 -g unittest1.c dominion.o rngs.o $(CFLAGS)
 
+unittest2: unittest2.c dominion.o rngs.o
+	gcc -o unittest2 -g unittest2.c dominion.o rngs.o $(CFLAGS)
+
 unittestresults: unittest1
 	./unittest1 &> unittestresults.out
 	gcov dominion.c -b -f >> unittestresults.out
