--- a/projects/tira/dominion/Makefile
+++ b/projects/tira/dominion/Makefile
@@ -35,7 +35,7 @@ unittestresults: unittest1 unittest2
 	gcov dominion.c -b -f >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
-	./unittest2 &> unittestresults.out
+	./unittest2 &>> unittestresults.out
 	gcov dominion.c -b -f >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
