--- a/projects/tira/dominion/Makefile
+++ b/projects/tira/dominion/Makefile
@@ -30,9 +30,13 @@ unittest1: unittest1.c dominion.o rngs.o
 unittest2: unittest2.c dominion.o rngs.o
 	gcc -o unittest2 -g unittest2.c dominion.o rngs.o $(CFLAGS)
 
+unittest3: unittest3.c dominion.o rngs.o
+	gcc -o unittest3 -g unittest2.c dominion.o rngs.o $(CFLAGS)
+
 unittestresults: unittest1 unittest2
 	./unittest1 &> unittestresults.out
 	./unittest2 &>> unittestresults.out
+	./unittest3 &>> unittestresults.out
 	gcov dominion.c -b -f >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
