--- a/projects/tira/dominion/Makefile
+++ b/projects/tira/dominion/Makefile
@@ -40,6 +40,7 @@ unittestresults: unittest1 unittest2
 	./unittest1 &> unittestresults.out
 	./unittest2 &>> unittestresults.out
 	./unittest3 &>> unittestresults.out
+	./unittest4 &>> unittestresults.out
 	gcov dominion.c -b -f >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
