--- a/projects/tira/dominion/Makefile
+++ b/projects/tira/dominion/Makefile
@@ -36,11 +36,15 @@ unittest3: unittest3.c dominion.o rngs.o
 unittest4: unittest4.c dominion.o rngs.o
 	gcc -o unittest4 -g unittest4.c dominion.o rngs.o $(CFLAGS)
 
-unittestresults: unittest1 unittest2 unittest3 unittest4
+unittest5: unittest5.c dominion.o rngs.o
+	gcc -o unittest5 -g unittest5.c dominion.o rngs.o $(CFLAGS)
+
+unittestresults: unittest1 unittest2 unittest3 unittest4 unittest5
 	./unittest1 &> unittestresults.out
 	./unittest2 &>> unittestresults.out
 	./unittest3 &>> unittestresults.out
 	./unittest4 &>> unittestresults.out
+	./unittest5 &>> unittestresults.out
 	gcov dominion.c -b -f >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
