--- a/projects/tira/quiz/makefile
+++ b/projects/tira/quiz/makefile
@@ -1,7 +1,7 @@
 CFLAGS= -Wall -fpic -coverage -lm -std=c99
 
 testme: testme.c
-	gcc -o testme -c testme.c -g $(CFLAGS)
+	gcc -o testme testme.c -g $(CFLAGS)
 
 randomtestresults: 	
 	./testme &> randomtestresults.out
