--- a/projects/tira/dominion/Makefile
+++ b/projects/tira/dominion/Makefile
@@ -33,9 +33,9 @@ randomtestcard2: randomtestcard2.c dominion.o rngs.o
 randomtestcard3: randomtestcard3.c dominion.o rngs.o
 	gcc -o randomtestcard3 -g randomtestcard3.c dominion.o rngs.o $(CFLAGS)
 
-randomtestresults: randomtestcard1 
+randomtestresults: randomtestcard1 randomtestcard2
 	./randomtestcard1 &> randomtestresults.out
-	#./randomtestcard2 &>> unittestresults.out
+	./randomtestcard2 &>> unittestresults.out
 	#./randomtestcard3 &>> unittestresults.out
 	gcov dominion.c -b -f >> randomtestresults.out
 	cat dominion.c.gcov >> randomtestresults.out
