--- a/projects/tira/dominion/Makefile
+++ b/projects/tira/dominion/Makefile
@@ -36,7 +36,7 @@ randomtestcard3: randomtestcard3.c dominion.o rngs.o
 randomtestresults: randomtestcard1 randomtestcard2
 	./randomtestcard1 &> randomtestresults.out
 	./randomtestcard2 &>> randomtestresults.out
-	#./randomtestcard3 &>> unittestresults.out
+	./randomtestcard3 &>> randomtestresults.out
 	gcov dominion.c -b -f >> randomtestresults.out
 	cat dominion.c.gcov >> randomtestresults.out
 
