add unit test files

--- a/projects/FinalProject-Bugs/Makefile
+++ b/projects/FinalProject-Bugs/Makefile
@@ -16,8 +16,8 @@ interface.o: interface.h interface.c
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
-unittest1: unittest1.c dominion.o rngs.o
-	gcc -o unittest1 -g unittest1.c dominion.o rngs.o $(CFLAGS)
+unittestbug1: unittestbug1.c dominion.o rngs.o
+	gcc -o unittestbug1 -g unittest1.c dominion.o rngs.o $(CFLAGS)
 
 unittest2: unittest2.c dominion.o rngs.o
 	gcc -o unittest2 -g unittest2.c dominion.o rngs.o $(CFLAGS)
@@ -26,7 +26,7 @@ unittest3: unittest3.c dominion.o rngs.o
 	gcc -o unittest3 -g unittest3.c dominion.o rngs.o $(CFLAGS)
 
 unittestresults: unittest1 unittest2 unittest3 unittest4 unittest5
-	./unittest1 &> unittestresults.out
+	./unittestbug1 &> unittestresults.out
 	#./unittest2 &>> unittestresults.out
 	#./unittest3 &>> unittestresults.out
 	gcov dominion.c -b -f >> unittestresults.out
