--- a/projects/FinalProject-Bugs/Makefile
+++ b/projects/FinalProject-Bugs/Makefile
@@ -17,17 +17,17 @@ player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
 unittestbug1: unittestbug1.c dominion.o rngs.o
-	gcc -o unittestbug1 -g unittest1.c dominion.o rngs.o $(CFLAGS)
+	gcc -o unittestbug1 -g unittestbug1.c dominion.o rngs.o $(CFLAGS)
 
-unittest2: unittest2.c dominion.o rngs.o
-	gcc -o unittest2 -g unittest2.c dominion.o rngs.o $(CFLAGS)
+unittestbug2: unittestbug2.c dominion.o rngs.o
+	gcc -o unittestbug2 -g unittestbug2.c dominion.o rngs.o $(CFLAGS)
 
 unittest3: unittest3.c dominion.o rngs.o
 	gcc -o unittest3 -g unittest3.c dominion.o rngs.o $(CFLAGS)
 
 unittestresults: unittest1 unittest2 unittest3 unittest4 unittest5
 	./unittestbug1 &> unittestresults.out
-	#./unittest2 &>> unittestresults.out
+	/unittestbug2 &>> unittestresults.out
 	#./unittest3 &>> unittestresults.out
 	gcov dominion.c -b -f >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
