added more tests

--- a/projects/FinalProject-Bugs/Makefile
+++ b/projects/FinalProject-Bugs/Makefile
@@ -22,13 +22,13 @@ unittestbug1: unittestbug1.c dominion.o rngs.o
 unittestbug2: unittestbug2.c dominion.o rngs.o
 	gcc -o unittestbug2 -g unittestbug2.c dominion.o rngs.o $(CFLAGS)
 
-unittest3: unittest3.c dominion.o rngs.o
-	gcc -o unittest3 -g unittest3.c dominion.o rngs.o $(CFLAGS)
+unittestbug3: unittestbug3.c dominion.o rngs.o
+	gcc -o unittestbug3 -g unittestbug3.c dominion.o rngs.o $(CFLAGS)
 
-unittestresults: unittest1 unittest2 unittest3 unittest4 unittest5
+unittestresults: unittestbug1 unittestbug2 unittestbug3
 	./unittestbug1 &> unittestresults.out
-	/unittestbug2 &>> unittestresults.out
-	#./unittest3 &>> unittestresults.out
+	./unittestbug2 &>> unittestresults.out
+	./unittestbug3 &>> unittestresults.out
 	gcov dominion.c -b -f >> unittestresults.out
 	cat dominion.c.gcov >> unittestresults.out
 
